fix products alignment

--- a/app/assets/stylesheets/components/_items.scss
+++ b/app/assets/stylesheets/components/_items.scss
@@ -12,6 +12,11 @@
  background-color: white;
 }
 
+.items {
+   display: flex;
+   align-items: center;
+}
+
 .items i {
    margin-right: 28px;
    color: #dbdbdb;
